# IntroAprendizajeAutomatico

./: LICENSE  README.md  pyproject.toml
notebooks/: consignas.ipynb
notebooks/Grupo1/: Entrega_3_Grupo_1.ipynb  myfile.parquet
notebooks/Grupo2/: df_final.parquet  df_supervisado_agrupado.parquet  trabajo_practico_3_grupo2.ipynb
