[tool.poetry]
name = "introaprendizajeautomatico"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
jupyterlab = "^3.1.1"
numpy = "^1.21.1"
pandas = "^1.3.1"
matplotlib = "^3.4.2"
scikit-learn = "^0.24.2"
scipy = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
